--- a/src/components/UI/ModalItem.module.css
+++ b/src/components/UI/ModalItem.module.css
@@ -27,3 +27,10 @@
   position: absolute;
   right: 0rem;
 }
+
+/* Extra small devices (phones, 600px and down) */
+/* @media only screen and (max-width: 600px) {
+  .imgCard {
+    width: 7rem;
+  }
+} */
